--- a/.gitattributes
+++ b/.gitattributes
@@ -17,3 +17,4 @@
 /test/raw/v99999999-fr/E000/R22/S11/imsim_99999999_R22_S11_C16_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
 /test/raw/v99999999-fr/E000/R22/S11/imsim_99999999_R22_S11_C17_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
 /test/registry.sqlite3 filter=lfs diff=lfs merge=lfs -text
+/data/registry.sqlite3 filter=lfs diff=lfs merge=lfs -text
