--- a/.gitattributes
+++ b/.gitattributes
@@ -18,3 +18,4 @@
 /test/raw/v99999999-fr/E000/R22/S11/imsim_99999999_R22_S11_C17_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
 /test/registry.sqlite3 filter=lfs diff=lfs merge=lfs -text
 /data/registry.sqlite3 filter=lfs diff=lfs merge=lfs -text
+/test/phosimOutput/real/output/temp_a_99999999_f2_R22_S11_C00_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
