--- a/.gitattributes
+++ b/.gitattributes
@@ -19,3 +19,7 @@
 /test/registry.sqlite3 filter=lfs diff=lfs merge=lfs -text
 /data/registry.sqlite3 filter=lfs diff=lfs merge=lfs -text
 /test/phosimOutput/real/output/temp_a_99999999_f2_R22_S11_C00_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
+/test/phosim_out/biasFrame/output/temp_a_9999_f2_R22_S11_C01_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
+/test/phosim_out/darkCurrent/output/temp_a_9999_f2_R22_S11_C01_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
+/test/phosim_out/flatDome/output/temp_a_9999_f2_R22_S11_C01_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
+/test/phosim_out/real/output/temp_a_99999999_f2_R22_S11_C01_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
