--- a/.gitattributes
+++ b/.gitattributes
@@ -49,3 +49,4 @@
 /tests/testData/raw/v99999999-fr/E000/R22/S11/imsim_99999999_R22_S11_C16_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
 /tests/testData/raw/v99999999-fr/E000/R22/S11/imsim_99999999_R22_S11_C17_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
 /tests/testData/registry.sqlite3 filter=lfs diff=lfs merge=lfs -text
+/tests/testData/repackagedPhoSimData/raw/20/R00/00000020-R00-S22-det197-000.fits filter=lfs diff=lfs merge=lfs -text
