--- a/.gitattributes
+++ b/.gitattributes
@@ -64,3 +64,4 @@
 /tests/testData/cwfsZernike/annularZernikeGradDy2.txt filter=lfs diff=lfs merge=lfs -text
 /tests/testData/cwfsZernike/annularZernikeJaco1st.txt filter=lfs diff=lfs merge=lfs -text
 /tests/testData/cwfsZernike/annularZernikeJaco2nd.txt filter=lfs diff=lfs merge=lfs -text
+/tests/testData/repackagedPhoSimData/raw/20/R00/00000020-R00-S22-det197.fits filter=lfs diff=lfs merge=lfs -text
