Add convolveTemplate to utilty and policy files.

--- a/policy/default.yaml
+++ b/policy/default.yaml
@@ -47,7 +47,7 @@ defocalDistInMm: 1.5
 # Donut image size in pixel (default value at 1.5 mm)
 donutImgSizeInPixel: 160
 
-# Centroid find algorithm. It can be "randomWalk" or "otsu"
+# Centroid find algorithm. It can be "randomWalk", "otsu", or "convolveTemplate"
 centroidFindAlgo: randomWalk
 
 # Camera mapper for the data butler to use
