Update documentation. Change EstimateZernikesFamTask to EstimateZernikesScienceSensorTask.

--- a/tests/testData/pipelineConfigs/testFamPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testFamPipeline.yaml
@@ -36,11 +36,11 @@ tasks:
       boresightRa: 0.0
       boresightDec: 0.0
       boresightRotAng: 90.0
-  estimateZernikesFamTask:
-    class: lsst.ts.wep.task.EstimateZernikesFamTask.EstimateZernikesFamTask
+  estimateZernikesScienceSensorTask:
+    class: lsst.ts.wep.task.EstimateZernikesScienceSensorTask.EstimateZernikesScienceSensorTask
     config:
       # And here we specify the configuration settings originally defined in
-      # EstimateZernikesFamTaskConfig.
+      # EstimateZernikesScienceSensorTaskConfig.
       donutTemplateSize: 160
       donutStampSize: 160
       initialCutoutPadding: 40
