--- a/.gitattributes
+++ b/.gitattributes
@@ -85,3 +85,7 @@
 /tests/testData/phosimOutput/realWfs/output/MC_H_20211231_006000_R40_SW1.fits filter=lfs diff=lfs merge=lfs -text
 /tests/testData/phosimOutput/realWfs/output/MC_H_20211231_006000_R44_SW0.fits filter=lfs diff=lfs merge=lfs -text
 /tests/testData/phosimOutput/realWfs/output/MC_H_20211231_006000_R44_SW1.fits filter=lfs diff=lfs merge=lfs -text
+/tests/testData/testImages/auxTelZWO/1579925613-16Pup_intra-0-1.fits filter=lfs diff=lfs merge=lfs -text
+/tests/testData/testImages/auxTelZWO/1579925662-16Pup_extra-0-1.fits filter=lfs diff=lfs merge=lfs -text
+/tests/testData/testImages/auxTelZWO/1579925833-16Pup_intra-0-1.fits filter=lfs diff=lfs merge=lfs -text
+/tests/testData/testImages/auxTelZWO/1579925882-16Pup_extra-0-1.fits filter=lfs diff=lfs merge=lfs -text
