Updates after comments in PR review.

--- a/tests/testData/pipelineConfigs/testBasePipeline.yaml
+++ b/tests/testData/pipelineConfigs/testBasePipeline.yaml
@@ -30,3 +30,5 @@ tasks:
       doOverscan: True
   generateDonutCatalogWcsTask:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
+    config:
+      donutSelector.fluxField: 'g_flux'
