--- a/tests/testData/pipelineConfigs/testFamPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testFamPipeline.yaml
@@ -30,6 +30,9 @@ tasks:
       doOverscan: True
   generateDonutCatalogWcsTask:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
+    config:
+      donutSelector.fluxField: 'g_flux'
+      donutSelector.donutRadius: 0.0
   estimateZernikesScienceSensorTask:
     class: lsst.ts.wep.task.EstimateZernikesScienceSensorTask.EstimateZernikesScienceSensorTask
     config:
