--- a/tests/testData/pipelineConfigs/testDonutCatWcsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testDonutCatWcsPipeline.yaml
@@ -30,3 +30,6 @@ tasks:
       doOverscan: True
   generateDonutCatalogWcsTask:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
+    config:
+      donutSelector.fluxField: 'g_flux'
+      donutSelector.donutRadius: 0.0
