--- a/policy/cwfs/instData/auxTelZWO/instParam.yaml
+++ b/policy/cwfs/instData/auxTelZWO/instParam.yaml
@@ -14,11 +14,9 @@ focalLength: 21.6
 apertureDiameter: 1.2
 
 # Move the M2 to fake the move of focal plane dz
-# Move the M2 by 0.8 mm = move the focal plane by 0.0328 m  (magnification of 41)
+# Move the M2 by 0.5 mm = move the focal plane by 0.0205 m (magnification of 41)
 # Defocal distance offset in m
-offset:
-  0.5mm: 2.05e-2
-  0.8mm: 3.28e-2
+offset: 2.05e-2
 
 # Camera pixel size in m
 pixelSize: 15.2e-6
