Update tests and testData for pipeline tasks for new instParams additions.

--- a/tests/testData/pipelineConfigs/testCalcZernikesCwfsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testCalcZernikesCwfsPipeline.yaml
@@ -38,6 +38,7 @@ tasks:
     config:
       # And here we specify the configuration settings originally defined in
       # EstimateZernikesCwfsTaskConfig.
+      # Test with default instrument configuration parameters
       donutTemplateSize: 160
       donutStampSize: 160
       initialCutoutPadding: 40
