--- a/tests/testData/pipelineConfigs/testDonutDirectDetectPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testDonutDirectDetectPipeline.yaml
@@ -33,4 +33,8 @@ tasks:
     config:
       donutTemplateSize: 160
       removeBlends: True
-      
+      instObscuration: 0.61
+      instFocalLength: 10.312
+      instApertureDiameter: 8.36
+      instDefocalOffset: 1.5e-3
+      instPixelSize: 10.0e-6
