--- a/tests/testData/pipelineConfigs/testFamPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testFamPipeline.yaml
@@ -4,6 +4,9 @@ description: wep basic processing test pipeline
 # Here we specify the corresponding instrument for the data we
 # will be using.
 instrument: lsst.obs.lsst.LsstCam
+# Use imported instrument configuration
+imports:
+  - location: $TS_WEP_DIR/policy/cwfs/instData/lsstfam/instParamPipeConfig.yaml
 # Then we can specify each task in our pipeline by a name
 # and then specify the class name corresponding to that task
 tasks:
