--- a/policy/cwfs/instData/auxTel/instParamPipeConfig.yaml
+++ b/policy/cwfs/instData/auxTel/instParamPipeConfig.yaml
@@ -1,12 +1,19 @@
-description: LSST Telescope Parameters
+description: LATISS Telescope Parameters
 instrument: lsst.obs.lsst.Latiss
 
 tasks:
   estimateZernikesLatissTask:
     class: lsst.ts.wep.task.EstimateZernikesLatissTask.EstimateZernikesLatissTask
     config:
+      # Obscuration (inner_radius / outer_radius of primary mirror)
       instObscuration: 0.3525
+      # Focal length in m
       instFocalLength: 21.6
+      # Aperture diameter in m
       instApertureDiameter: 1.2
-      instDefocalOffset: 3.28e-2
+      # Move the M2 to fake the move of focal plane dz
+      # Move the M2 by 0.8 mm = move the focal plane by 32.8 mm  (magnification of 41)
+      # Defocal distance offset in mm
+      instDefocalOffset: 32.8
+      # Camera pixel size in m
       instPixelSize: 10.0e-6
