--- a/policy/cwfs/instData/lsst/instParamPipeConfig.yaml
+++ b/policy/cwfs/instData/lsst/instParamPipeConfig.yaml
@@ -5,8 +5,13 @@ tasks:
   estimateZernikesCwfsTask:
     class: lsst.ts.wep.task.EstimateZernikesCwfsTask.EstimateZernikesCwfsTask
     config:
+      # Obscuration (inner_radius / outer_radius of M1M3)
       instObscuration: 0.61
+      # Focal length in m
       instFocalLength: 10.312
+      # Aperture diameter in m
       instApertureDiameter: 8.36
-      instDefocalOffset: 1.5e-3
+      # Defocal distance offset in mm
+      instDefocalOffset: 1.5
+      # Camera pixel size in m
       instPixelSize: 10.0e-6
