--- a/tests/testData/pipelineConfigs/testDonutDirectDetectPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testDonutDirectDetectPipeline.yaml
@@ -36,5 +36,5 @@ tasks:
       instObscuration: 0.61
       instFocalLength: 10.312
       instApertureDiameter: 8.36
-      instDefocalOffset: 1.5e-3
+      instDefocalOffset: 1.5
       instPixelSize: 10.0e-6
