--- a/tests/testData/pipelineConfigs/testCalcZernikesCwfsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testCalcZernikesCwfsPipeline.yaml
@@ -28,6 +28,7 @@ tasks:
       doApplyGains: True
       doFringe: False
       doOverscan: True
+      python: OverscanCorrectionTask.ConfigClass.fitType = 'MEDIAN'
   generateDonutCatalogWcsTask:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
     config:
