--- a/tests/testData/pipelineConfigs/testDonutDirectDetectPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testDonutDirectDetectPipeline.yaml
@@ -28,6 +28,7 @@ tasks:
       doApplyGains: True
       doFringe: False
       doOverscan: True
+      python: OverscanCorrectionTask.ConfigClass.fitType = 'MEDIAN'
   generateDonutDirectDetectTask:
     class: lsst.ts.wep.task.GenerateDonutDirectDetectTask.GenerateDonutDirectDetectTask
     config:
