--- a/tests/testData/pipelineConfigs/testFamPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testFamPipeline.yaml
@@ -31,6 +31,7 @@ tasks:
       doApplyGains: True
       doFringe: False
       doOverscan: True
+      python: OverscanCorrectionTask.ConfigClass.fitType = 'MEDIAN'
   generateDonutCatalogWcsTask:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
     config:
