Update tasks and WfEstimator to run with masked blending. Add tests for blending in tasks.

--- a/tests/testData/pipelineConfigs/testCalcZernikesCwfsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testCalcZernikesCwfsPipeline.yaml
@@ -36,7 +36,7 @@ tasks:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
     config:
       donutSelector.fluxField: 'g_flux'
-      donutSelector.donutRadius: 0.0
+      donutSelector.unblendedSeparation: 1
   cutOutDonutsCwfsTask:
     class: lsst.ts.wep.task.CutOutDonutsCwfsTask.CutOutDonutsCwfsTask
     config:
