--- a/tests/testData/pipelineConfigs/testCalcZernikesScienceSensorPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testCalcZernikesScienceSensorPipeline.yaml
@@ -36,7 +36,7 @@ tasks:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
     config:
       donutSelector.fluxField: 'g_flux'
-      donutSelector.donutRadius: 0.0
+      donutSelector.unblendedSeparation: 1
   cutOutDonutsScienceSensorTask:
     class: lsst.ts.wep.task.CutOutDonutsScienceSensorTask.CutOutDonutsScienceSensorTask
     config:
