--- a/tests/testData/pipelineConfigs/testCwfsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testCwfsPipeline.yaml
@@ -33,7 +33,7 @@ tasks:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
     config:
       donutSelector.fluxField: 'g_flux'
-      donutSelector.donutRadius: 0.0
+      donutSelector.unblendedSeparation: 1
   estimateZernikesCwfsTask:
     class: lsst.ts.wep.task.EstimateZernikesCwfsTask.EstimateZernikesCwfsTask
     config:
