--- a/tests/testData/pipelineConfigs/testDonutCatWcsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testDonutCatWcsPipeline.yaml
@@ -33,4 +33,4 @@ tasks:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
     config:
       donutSelector.fluxField: 'g_flux'
-      donutSelector.donutRadius: 0.0
+      donutSelector.unblendedSeparation: 1
