--- a/policy/cwfs/instData/auxTel/instParamPipeConfig.yaml
+++ b/policy/cwfs/instData/auxTel/instParamPipeConfig.yaml
@@ -2,8 +2,8 @@ description: LATISS Telescope Parameters
 instrument: lsst.obs.lsst.Latiss
 
 tasks:
-  estimateZernikesLatissTask:
-    class: lsst.ts.wep.task.EstimateZernikesLatissTask.EstimateZernikesLatissTask
+  cutOutDonutsScienceSensorTask:
+    class: lsst.ts.wep.task.CutOutDonutsScienceSensorTask.CutOutDonutsScienceSensorTask
     config:
       # Obscuration (inner_radius / outer_radius of primary mirror)
       instObscuration: 0.3525
@@ -17,3 +17,22 @@ tasks:
       instDefocalOffset: 32.8
       # Camera pixel size in m
       instPixelSize: 10.0e-6
+      # Set the optical model for LATISS
+      opticalModel: 'onAxis'
+  calcZernikesTask:
+    class: lsst.ts.wep.task.CalcZernikesTask.CalcZernikesTask
+    config:
+      # Obscuration (inner_radius / outer_radius of primary mirror)
+      instObscuration: 0.3525
+      # Focal length in m
+      instFocalLength: 21.6
+      # Aperture diameter in m
+      instApertureDiameter: 1.2
+      # Move the M2 to fake the move of focal plane dz
+      # Move the M2 by 0.8 mm = move the focal plane by 32.8 mm  (magnification of 41)
+      # Defocal distance offset in mm
+      instDefocalOffset: 32.8
+      # Camera pixel size in m
+      instPixelSize: 10.0e-6
+      # Set the optical model for LATISS
+      opticalModel: 'onAxis'
