--- a/policy/cwfs/instData/comcam/instParamPipeConfig.yaml
+++ b/policy/cwfs/instData/comcam/instParamPipeConfig.yaml
@@ -2,8 +2,22 @@ description: LSST ComCam Parameters
 instrument: lsst.obs.lsst.LsstComCam
 
 tasks:
-  estimateZernikesScienceSensorTask:
-    class: lsst.ts.wep.task.EstimateZernikesScienceSensorTask.EstimateZernikesScienceSensorTask
+  cutOutDonutsScienceSensorTask:
+    class: lsst.ts.wep.task.CutOutDonutsScienceSensorTask.CutOutDonutsScienceSensorTask
+    config:
+      # Obscuration (inner_radius / outer_radius of M1M3)
+      instObscuration: 0.61
+      # Focal length in m
+      instFocalLength: 10.3034
+      # Aperture diameter in m
+      instApertureDiameter: 8.36
+      # Defocal distance offset in mm
+      # Bo Xin used the offset of 1.5225 mm to get the parameters used for 1.5 mm in ZEMAX
+      instDefocalOffset: 1.5225
+      # Camera pixel size in m
+      instPixelSize: 10.0e-6
+  calcZernikesTask:
+    class: lsst.ts.wep.task.CalcZernikesTask.CalcZernikesTask
     config:
       # Obscuration (inner_radius / outer_radius of M1M3)
       instObscuration: 0.61
