--- a/tests/testData/pipelineConfigs/testLatissPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testLatissPipeline.yaml
@@ -1,8 +1,5 @@
 description: ISR basic processing pipeline
 instrument: lsst.obs.lsst.Latiss
-# Use imported instrument configuration
-imports:
-  - location: $TS_WEP_DIR/policy/cwfs/instData/auxTel/instParamPipeConfig.yaml
 tasks:
   isr:
     class: lsst.ip.isr.isrTask.IsrTask
@@ -36,3 +33,15 @@ tasks:
       donutStampSize: 200
       initialCutoutPadding: 40
       opticalModel: 'onAxis'
+      # Obscuration (inner_radius / outer_radius of primary mirror)
+      instObscuration: 0.3525
+      # Focal length in m
+      instFocalLength: 21.6
+      # Aperture diameter in m
+      instApertureDiameter: 1.2
+      # Move the M2 to fake the move of focal plane dz
+      # Move the M2 by 0.8 mm = move the focal plane by 32.8 mm  (magnification of 41)
+      # Defocal distance offset in mm
+      instDefocalOffset: 32.8
+      # Camera pixel size in m
+      instPixelSize: 10.0e-6
