GenerateDonutCatalogWcsTask takes filter information from exposures. Update pipeline configs.

--- a/tests/testData/pipelineConfigs/testDonutCatWcsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testDonutCatWcsPipeline.yaml
@@ -33,3 +33,5 @@ tasks:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
     config:
       donutSelector.unblendedSeparation: 1
+      donutSelector.userMagLimit: True
+
