--- a/tests/testData/pipelineConfigs/testDonutCatWcsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testDonutCatWcsPipeline.yaml
@@ -33,5 +33,5 @@ tasks:
     class: lsst.ts.wep.task.GenerateDonutCatalogWcsTask.GenerateDonutCatalogWcsTask
     config:
       donutSelector.unblendedSeparation: 1
-      donutSelector.userMagLimit: True
+      donutSelector.useCustomMagLimit: True
 
