--- a/policy/cwfs/instData/auxTel/instParamPipeConfig.yaml
+++ b/policy/cwfs/instData/auxTel/instParamPipeConfig.yaml
@@ -3,7 +3,7 @@ instrument: lsst.obs.lsst.Latiss
 
 tasks:
   cutOutDonutsScienceSensorTask:
-    class: lsst.ts.wep.task.CutOutDonutsScienceSensorTask.CutOutDonutsScienceSensorTask
+    class: lsst.ts.wep.task.cutOutDonutsScienceSensorTask.CutOutDonutsScienceSensorTask
     config:
       # Obscuration (inner_radius / outer_radius of primary mirror)
       instObscuration: 0.3525
@@ -20,7 +20,7 @@ tasks:
       # Set the optical model for LATISS
       opticalModel: 'onAxis'
   calcZernikesTask:
-    class: lsst.ts.wep.task.CalcZernikesTask.CalcZernikesTask
+    class: lsst.ts.wep.task.calcZernikesTask.CalcZernikesTask
     config:
       # Obscuration (inner_radius / outer_radius of primary mirror)
       instObscuration: 0.3525
