--- a/policy/cwfs/instData/comcam/instParamPipeConfig.yaml
+++ b/policy/cwfs/instData/comcam/instParamPipeConfig.yaml
@@ -3,7 +3,7 @@ instrument: lsst.obs.lsst.LsstComCam
 
 tasks:
   cutOutDonutsScienceSensorTask:
-    class: lsst.ts.wep.task.CutOutDonutsScienceSensorTask.CutOutDonutsScienceSensorTask
+    class: lsst.ts.wep.task.cutOutDonutsScienceSensorTask.CutOutDonutsScienceSensorTask
     config:
       # Obscuration (inner_radius / outer_radius of M1M3)
       instObscuration: 0.61
@@ -17,7 +17,7 @@ tasks:
       # Camera pixel size in m
       instPixelSize: 10.0e-6
   calcZernikesTask:
-    class: lsst.ts.wep.task.CalcZernikesTask.CalcZernikesTask
+    class: lsst.ts.wep.task.calcZernikesTask.CalcZernikesTask
     config:
       # Obscuration (inner_radius / outer_radius of M1M3)
       instObscuration: 0.61
