--- a/tests/testData/pipelineConfigs/testCalcZernikesLatissPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testCalcZernikesLatissPipeline.yaml
@@ -29,17 +29,17 @@ tasks:
       doOverscan: True
       python: OverscanCorrectionTask.ConfigClass.fitType = 'MEDIAN_PER_ROW'
   generateDonutDirectDetectTask:
-    class: lsst.ts.wep.task.GenerateDonutDirectDetectTask.GenerateDonutDirectDetectTask
+    class: lsst.ts.wep.task.generateDonutDirectDetectTask.GenerateDonutDirectDetectTask
     config:
       donutTemplateSize: 200
       removeBlends: True
       opticalModel: 'onAxis'
   cutOutDonutsScienceSensorTask:
-    class: lsst.ts.wep.task.CutOutDonutsScienceSensorTask.CutOutDonutsScienceSensorTask
+    class: lsst.ts.wep.task.cutOutDonutsScienceSensorTask.CutOutDonutsScienceSensorTask
     config:
       # And here we specify the configuration settings
       donutTemplateSize: 200
       donutStampSize: 200
       initialCutoutPadding: 40
   calcZernikesTask:
-    class: lsst.ts.wep.task.CalcZernikesTask.CalcZernikesTask
+    class: lsst.ts.wep.task.calcZernikesTask.CalcZernikesTask
