--- a/policy/cwfs/instData/lsst/instParamPipeConfig.yaml
+++ b/policy/cwfs/instData/lsst/instParamPipeConfig.yaml
@@ -12,9 +12,8 @@ tasks:
       # Aperture diameter in m
       instApertureDiameter: 8.36
       # Defocal distance offset in mm
-      # Set to 0.0 when running CWFS because
-      # focal plane offset is 0.
-      instDefocalOffset: 0.0
+      # Set to 1.5 since this will override focusZ
+      instDefocalOffset: 1.5
       # Camera pixel size in m
       instPixelSize: 10.0e-6
   calcZernikesTask:
@@ -27,8 +26,7 @@ tasks:
       # Aperture diameter in m
       instApertureDiameter: 8.36
       # Defocal distance offset in mm
-      # Set to 0.0 when running CWFS because
-      # focal plane offset is 0.
-      instDefocalOffset: 0.0
+      # Set to 1.5 since this will override focusZ
+      instDefocalOffset: 1.5
       # Camera pixel size in m
       instPixelSize: 10.0e-6
