--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+*.fits filter=lfs diff=lfs merge=lfs -text
 /test/bias/v0/R22/S11/imsim_0_R22_S11_C14.fits filter=lfs diff=lfs merge=lfs -text
 /test/eimage/v99999999-fr/E000/R22/eimage_99999999_R22_S11_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
 /test/raw/v99999999-fr/E000/R22/S11/imsim_99999999_R22_S11_C00_E000.fits.gz filter=lfs diff=lfs merge=lfs -text
