--- a/tests/SConscript
+++ b/tests/SConscript
@@ -1,3 +1,12 @@
 # -*- python -*-
-from lsst.sconsUtils import scripts
+from lsst.sconsUtils import scripts, env
+import os
+
+pgpassfile = os.getenv("PGPASSFILE")
+pguser = os.getenv("PGUSER")
+if pgpassfile:
+    env["ENV"]["PGPASSFILE"] = pgpassfile
+if pguser:
+    env["ENV"]["PGUSER"] = pguser
+
 scripts.BasicSConscript.tests(pyList=[])
