--- a/policy/instruments/ComCam.yaml
+++ b/policy/instruments/ComCam.yaml
@@ -7,6 +7,7 @@ imports: policy:instruments/LsstCam.yaml
 # Apply these overrides
 name: LsstComCam
 batoidModelName: ComCam_{band}
+batoidOffsetOptic: ComCam
 
 maskParams:
   M1:
@@ -25,7 +26,7 @@ maskParams:
   L1_entrance:
     outer:
       clear: True
-      thetaMin: 0.356
+      thetaMin: 0.339
       thetaMax: 0.500
-      center: [-1.82599e-01, -2.22664e+00, -4.04880e+00, -4.36910e-02]
-      radius: [3.39858e-01, -2.73065e-03, 5.28104e-02, 5.91961e+00]
+      center: [-7.06838e-01, -1.61121e+00, -4.33191e+00, -1.30120e-02]
+      radius: [8.52827e-01, -5.86062e-01, 2.59934e-01, 5.81747e+00]
