Change configuration options for GenerateDonutFromRefitWcsTask to specify filter for photometric catalog as well.

--- a/tests/testData/pipelineConfigs/testDonutFromRefitWcsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testDonutFromRefitWcsPipeline.yaml
@@ -39,6 +39,7 @@ tasks:
     config:
       connections.astromRefCat: "cal_ref_cat"
       connections.photoRefCat: "cal_ref_cat"
+      astromRefFilter: "g"
       astromTask.referenceSelector.doMagLimit: False
       donutSelector.unblendedSeparation: 1
   cutOutDonutsScienceSensorTask:
