--- a/tests/testData/pipelineConfigs/testDonutFromRefitWcsPipeline.yaml
+++ b/tests/testData/pipelineConfigs/testDonutFromRefitWcsPipeline.yaml
@@ -32,7 +32,7 @@ tasks:
   generateDonutDirectDetectTask:
     class: lsst.ts.wep.task.generateDonutDirectDetectTask.GenerateDonutDirectDetectTask
     config:
-      connections.donutCatalog: "directDetectDonutCatalogAstropy"
+      connections.donutCatalog: "directDetectDonutTable"
       connections.exposure: "preFitPostISRCCD"
   generateDonutFromRefitWcsTask:
     class: lsst.ts.wep.task.generateDonutFromRefitWcsTask.GenerateDonutFromRefitWcsTask
