--- a/pipelines/production/comCamRapidAnalysisPipeline.yaml
+++ b/pipelines/production/comCamRapidAnalysisPipeline.yaml
@@ -39,13 +39,13 @@ tasks:
   plotAOSTask:
     class: lsst.donut.viz.PlotAOSTask
     config:
-      doRubinTVUpload: false
+      doRubinTVUpload: true
   aggregateDonutStampsTask:
     class: lsst.donut.viz.AggregateDonutStampsTask
   plotDonutTask:
     class: lsst.donut.viz.PlotDonutTask
     config:
-      doRubinTVUpload: false
+      doRubinTVUpload: true
 
 # Define pipeline steps
 subsets:
@@ -56,8 +56,8 @@ subsets:
       - cutOutDonutsScienceSensorGroupTask
       - calcZernikesTask
     description: |
-      This step processes the input images with ISR, 
-      finds and cuts out the donut stamps, 
+      This step processes the input images with ISR,
+      finds and cuts out the donut stamps,
       and estimates the Zernike coefficients from the donut pairs.
   step2a:
     subset:
