--- a/pipelines/production/comCamSimRapidAnalysisPipeline.yaml
+++ b/pipelines/production/comCamSimRapidAnalysisPipeline.yaml
@@ -39,13 +39,13 @@ tasks:
   plotAOSTask:
     class: lsst.donut.viz.PlotAOSTask
     config:
-      doRubinTVUpload: false
+      doRubinTVUpload: true
   aggregateDonutStampsTask:
     class: lsst.donut.viz.AggregateDonutStampsTask
   plotDonutTask:
     class: lsst.donut.viz.PlotDonutTask
     config:
-      doRubinTVUpload: false
+      doRubinTVUpload: true
 
 # Define pipeline steps
 subsets:
