--- a/pipelines/production/comCamRapidAnalysisPipeline.yaml
+++ b/pipelines/production/comCamRapidAnalysisPipeline.yaml
@@ -19,9 +19,9 @@ tasks:
     config:
       estimateZernikes.maxNollIndex: 28
       estimateZernikes.saveHistory: False
-      estimateZernikes.maskKwargs: {'doMaskBlends': False}
+      estimateZernikes.maskKwargs: { "doMaskBlends": False }
   isr:
-    class: lsst.ip.isr.IsrTask
+    class: lsst.ip.isr.IsrTaskLSST
     config:
       # Although we don't have to apply the amp offset corrections, we do want
       # to compute them for analyzeAmpOffsetMetadata to report on as metrics.
@@ -29,7 +29,10 @@ tasks:
       ampOffset.doApplyAmpOffset: false
       # Turn off slow steps in ISR
       doBrighterFatter: false
-      doCrosstalk: false
+      # Mask saturated pixels,
+      # but turn off quadratic crosstalk because it's currently broken
+      doSaturation: True
+      crosstalk.doQuadraticCrosstalkCorrection: False
   aggregateZernikeTablesTask:
     class: lsst.donut.viz.AggregateZernikeTablesTask
   aggregateDonutTablesTask:
