--- a/pipelines/production/comCamSimRapidAnalysisPipeline.yaml
+++ b/pipelines/production/comCamSimRapidAnalysisPipeline.yaml
@@ -30,22 +30,22 @@ tasks:
       # Turn off slow steps in ISR
       doBrighterFatter: false
       doCrosstalk: false
-  aggregateZernikeTablesTask:
-    class: lsst.donut.viz.AggregateZernikeTablesTask
-  aggregateDonutTablesTask:
-    class: lsst.donut.viz.AggregateDonutTablesTask
+  aggregateZernikesTask:
+    class: lsst.donut.viz.AggregateZernikesTask
+  aggregateDonutCatalogsTask:
+    class: lsst.donut.viz.AggregateDonutCatalogsTask
   aggregateAOSVisitTableTask:
     class: lsst.donut.viz.AggregateAOSVisitTableTask
   plotAOSTask:
     class: lsst.donut.viz.PlotAOSTask
     config:
-      doRubinTVUpload: true
+      doRubinTVUpload: false
   aggregateDonutStampsTask:
     class: lsst.donut.viz.AggregateDonutStampsTask
   plotDonutTask:
     class: lsst.donut.viz.PlotDonutTask
     config:
-      doRubinTVUpload: true
+      doRubinTVUpload: false
 
 # Define pipeline steps
 subsets:
@@ -61,8 +61,8 @@ subsets:
       and estimates the Zernike coefficients from the donut pairs.
   step2a:
     subset:
-      - aggregateZernikeTablesTask
-      - aggregateDonutTablesTask
+      - aggregateZernikesTask
+      - aggregateDonutCatalogsTask
       - aggregateAOSVisitTableTask
       - plotAOSTask
       - aggregateDonutStampsTask
