Add group pairer version of AggregateDonutTablesTask in place of default.

--- a/pipelines/production/comCamRapidAnalysisPipeline.yaml
+++ b/pipelines/production/comCamRapidAnalysisPipeline.yaml
@@ -36,8 +36,12 @@ tasks:
       crosstalk.doQuadraticCrosstalkCorrection: False
   aggregateZernikeTablesTask:
     class: lsst.donut.viz.AggregateZernikeTablesTask
-  aggregateDonutTablesTask:
-    class: lsst.donut.viz.AggregateDonutTablesTask
+  aggregateDonutTablesGroupTask:
+      class: lsst.donut.viz.AggregateDonutTablesTask
+      config:
+          python: |
+              from lsst.ts.wep.task.pairTask import GroupPairer
+              config.pairer.retarget(GroupPairer)
   aggregateAOSVisitTableTask:
     class: lsst.donut.viz.AggregateAOSVisitTableTask
   plotAOSTask:
